# nobubo

./: .gitignore  PdfProperties.py  README.md  assemble_and_chop.py  assemble_collage.py  burdassembler.py  chop_up_collage.py  nobubo.py  ols.py  pyproject.toml  readme.md  requirements.txt  setup.py  utils.py
.github/workflows/: run-tests.yml
nobubo/: __main__.py  assembly.py  calc.py  cli.py  core.py  disassembly.py  init_nobubo.py  nobubo.py  ols.py  output.py  pdf.py  utils.py  writer.py
src/nobubo/: .gitignore  __main__.py  assembly.py  cli.py  disassembly.py  errors.py  init_nobubo.py
tests/: conftest.py  test_blackbox.py  test_calc.py  test_ols.py  test_utils.py
tests/testdata/: mockpattern_nooverview_8x4.odt  mockpattern_oneoverview_8x4.odt  mockpattern_twooverviews_8x4_7x3.odt
