[tool.poetry]
name = "nobubo"
version = "1.5.0"
description = "Nobubo assembles a digital pdf sewing pattern and cuts it up into a desired output print size. A specialized n-up tool also suited for non-sewing purposes."
authors = ["bytinbit"]
license = "AGPL v3.0"
readme = "README.md"
homepage = "https://github.com/bytinbit/nobubo"
repository = "https://github.com/bytinbit/nobubo"
classifiers =  [
        "Topic :: Printing",
        "Topic :: Utilities",
        "Topic :: Multimedia :: Graphics :: Graphics Conversion",
        "License :: OSI Approved :: GNU Affero General Public License v3",
    ]
packages = [
	{ include = "nobubo", from = "src"},
]

[tool.poetry.scripts]
nobubo = "nobubo.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pikepdf = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.1"
mypy = "^1.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
pdfminer-six = "^20221105"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"

### --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true  
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

### Other strictness flags
warn_unreachable = true
disallow_any_unimported = true

### Output
show_error_codes = true
show_error_context = true
pretty = true

ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    ]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py,mypy,linting
testpaths = "tests"

[testenv]
description = Run pytest
deps = 
    pytest
    pytest-cov
    pdfminer-six
commands = pytest {posargs}

[testenv:mypy]
description = Check typing with mypy
deps = mypy
       pytest
       pdfminer-six
passenv = TERM
commands = mypy {posargs} src/nobubo tests

[testenv:linting]
description = Run flake8 for linting
deps = flake8
commands = flake8 --max-line-length 88 src/nobubo tests {posargs}

[testenv:coverage]
description = Run pytest with coverage
deps = pytest
       pytest-cov
       pdfminer-six
commands = pytest tests --cov=nobubo --cov-report html -Werror

[testenv:pikepdf-main]
description = Run project tests against pikepdf-main branch
deps = 
    git+https://github.com/pikepdf/pikepdf#master
    pytest
    pytest-cov
    rich
    pdfminer-six
commands = pytest {posargs}
"""
